<resources>
    <string name="facebook_app_id">124695344865811</string>
    <string name="fb_login_protocol_scheme">fb124695344865811</string>

    <string name="app_name">FoodTour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tour_maps">Map</string>
    <string name="title_activity_paypal">PaypalActivity</string>
    <string name="text_explore">Explore</string>
    <string name="text_favourites">Favourites</string>
    <string name="text_inbox">Inbox</string>
    <string name="text_profile">Profile</string>
    <string name="title_activity_location_chooser">LocationChooserActivity</string>

    <string name="choose_contry">Begin your tour here</string>
    <string name="choose_city">City</string>

    <string name="countryIntentCode">Country</string>
    <string name="cityIntentCode">City</string>

    <string name="selectCountry">Select country</string>
    <string name="selectCity">Select city</string>

    <string-array name="countries">
        <item>@string/selectCountry</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="cities">
        <item>@string/selectCity</item>
        <item>Auckland</item>
        <item>Melbourne</item>
        <item>Adelaide</item>
        <item>Sydney</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>
    <string name="paypal_startpayment">Payment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip_login">Skip Login</string>
    <string name="terms_condition">Agree terms and condition</string>
    <string name="main_filter_text">Filter</string>

    <string name="saved_tours">Saved Tour</string>
    <string name="my_tours">My Tour</string>
    <string name="search_food_tour">Search Tours</string>
    <string name="how_it_works">How it works</string>

    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="trip_advisor">Trip Advisor reviews</string>
    <string name="logout">Logout</string>

</resources>
