<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Communicate">
        <menu>
            <item
            android:id="@+id/menu_saved_tours"
            android:icon="@drawable/ic_savelocation"
            android:title="@string/saved_tours" />
            <item
                android:id="@+id/menu_my_tours"
                android:icon="@drawable/ic_location"
                android:title="@string/my_tours" />
            <item
                android:id="@+id/menu_search_tours"
                android:icon="@drawable/ic_search_black_24px"
                android:title="@string/search_food_tour" />
            <item
                android:id="@+id/menu_how_it_works"
                android:icon="@drawable/ic_how_it_works"
                android:title="@string/how_it_works" />

            <item
                android:id="@+id/menu_about_us"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/about_us" />

            <item
                android:id="@+id/menu_contact_us"
                android:icon="@drawable/ic_mail_outline_black_24px"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/menu_tripadvisor_review"
                android:icon="@drawable/ic_review"
                android:title="@string/trip_advisor" />

            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
