<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24px"
        android:title="@string/text_explore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24px"
        android:title="@string/text_favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_pin_black_24px"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
</menu>